# UOX3

./: README.md  automake.sh
.github/workflows/: main.yml  windows_x64_build.yml
compression/ide/: compression.vcxproj
ide/: uox3.sln  uox3.vcxproj  uox3.vcxproj.filters
ide/uox3.xcodeproj/: project.pbxproj
ide/vs2017/: UOX3_Official.vcxproj  UOX3_Official.vcxproj.filters
ide/vs2022/: uox3.sln  uox3.vcxproj  uox3.vcxproj.filters
ide/xcode/uox3.xcodeproj/: project.pbxproj
ide/xcode/uox3.xcworkspace/: contents.xcworkspacedata
jsengine/: jsarray.c  jsdtoa.c
jsengine/ide/: jsengine.vcxproj
source/: CMakeLists.txt  ConfigOS.h  IP4Address.cpp  cAccountClass.cpp  cConsole.cpp  cServerData.cpp  cSocket.cpp  fileio.cpp  network.cpp  typedefs.h  uox3.cpp  worldmain.h
spidermonkey/: CMakeLists.txt
spidermonkey/ide/VS2017/: SpiderMonkey.sln  js32.vcxproj  js32.vcxproj.filters
spidermonkey/ide/jsengine.xcodeproj/: project.pbxproj
spidermonkey/ide/vs2022/: jsengine.vcxproj
spidermonkey/ide/xcode/jsengine.xcodeproj/: project.pbxproj
zlib/: .gitignore  CMakeLists.txt
zlib/ide/compression.xcodeproj/: project.pbxproj
zlib/ide/vs2022/: zlib.vcxproj
zlib/ide/xcode/zlib.xcodeproj/: project.pbxproj
zlib/ide/xcode/zlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
